fix overflow

--- a/src/app/public/pages/home/home.component.scss
+++ b/src/app/public/pages/home/home.component.scss
@@ -2,7 +2,8 @@
 
 .home-container{
     max-width: 1400px;
-    max-height: 100vh;
+    max-height: calc(100% - 100px);
+    overflow: scroll;
     margin: 0 auto;
 
     .h-content{
