--- a/src/app/public/pages/list/list.component.scss
+++ b/src/app/public/pages/list/list.component.scss
@@ -218,6 +218,7 @@
         flex: 5;
         min-width: 60%;
         max-height: 100%;
+        overflow: scroll;
         position: relative;
         background-color: styles.color(primary, 0);
         @include styles.bpFactory($max: 800px ){flex-direction: column; padding-bottom: 300px;}
